tests/fixtures/LatestTests/VariableDeclarationTests/errors/uninitialized_use_in_expression.fg
/; EXPECT_ERROR: VariableNotFound
var y:int = x + 5
var x:int = 10

